[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ChangeScene/LoseGame.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UserInterface/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/UserInterface/Puntatore.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[node name="LoseGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.686275, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 100
alignment = 1
script = ExtResource( 1 )

[node name="StatsBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 295.0
custom_constants/separation = 40

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/StatsBox"]
margin_right = 1024.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "YOU LOST YOU 4th DIMENSIONAL
PIECE OF UNEXPLORED SPACE"
align = 1

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/StatsBox"]
margin_top = 139.0
margin_right = 1024.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "SCORE: 0"
align = 1

[node name="ButtonsBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 1024.0
margin_bottom = 483.0

[node name="RigiocaBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsBox"]
margin_right = 1024.0
margin_bottom = 42.0
alignment = 1

[node name="Sprite1" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonsBox/RigiocaBox"]
margin_left = 410.0
margin_right = 456.0
margin_bottom = 42.0
texture = ExtResource( 3 )

[node name="RigiocaButton" type="ToolButton" parent="MarginContainer/VBoxContainer/ButtonsBox/RigiocaBox"]
margin_left = 460.0
margin_right = 564.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
text = "RETRY"

[node name="Sprite2" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonsBox/RigiocaBox"]
margin_left = 568.0
margin_right = 614.0
margin_bottom = 42.0
texture = ExtResource( 3 )
flip_h = true

[node name="MenuBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ButtonsBox"]
margin_top = 46.0
margin_right = 1024.0
margin_bottom = 88.0
alignment = 1

[node name="Sprite3" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonsBox/MenuBox"]
margin_left = 416.0
margin_right = 462.0
margin_bottom = 42.0
texture = ExtResource( 3 )

[node name="MenuButton" type="ToolButton" parent="MarginContainer/VBoxContainer/ButtonsBox/MenuBox"]
margin_left = 466.0
margin_right = 558.0
margin_bottom = 42.0
rect_min_size = Vector2( 92, 40 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = "MENU"

[node name="Sprite4" type="TextureRect" parent="MarginContainer/VBoxContainer/ButtonsBox/MenuBox"]
margin_left = 562.0
margin_right = 608.0
margin_bottom = 42.0
texture = ExtResource( 3 )
flip_h = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsBox/RigiocaBox/RigiocaButton" to="MarginContainer/VBoxContainer" method="_on_RigiocaButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsBox/MenuBox/MenuButton" to="MarginContainer/VBoxContainer" method="_on_MenuButton_pressed"]
